2006-07-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/dump_on_crash: New test; check that debug dumps work.
	* testsuite.lua: Add it. Also, supply --confdir in safe_mtn.

2006-07-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* cmd.hh: Declare a string commands::hidden_group, that can be given
	as the group name to make a command invisible.
	* commands.cc: Make it work and use it for a new command, "mtn crash".

2006-07-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* monotone.cc: If we don't have a workspace and no dump file is
	specified, set the dumpfile to $CONFDIR/dump . Not tested; that would
	seem to need a reliable (not-a-bug) way to make monotone crash.

2006-07-16  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Updated and translated a few more strings (53 to go).

2006-07-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/revert_--missing_in_subdir/__driver__.lua: Make it
	line-ending safe.

2006-07-15  Derek Scherger  <derek@echologic.com>

	* tester.txt: wrap long lines and fix a couple spelling errors

2006-07-15  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A few fuzzies to clear.

2006-07-15  Nathaniel Smith  <njs@pobox.com>

	* tests/diff_output_formats/: Use --no-show-encloser in the places
	where it used to not use --show-encloser.

2006-07-15  Matt Johnston <matt@ucc.asn.au>

	* boost/format/feed_args.hpp: cast buf.pcount() to size_type as well,
	fixes compiling with boost 1.32.0 for sarge

2006-07-14  Nathaniel Smith  <njs@pobox.com>

	* cmd_files.cc (diff): 
	* cmd_diff_log.cc (fdiff): Oops, rename OPT_SHOW_ENCLOSER here
	too.

2006-07-14  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc (diff_show_encloser): Default to true.
	* options.hh (OPT_SHOW_ENCLOSER): Rename to OPT_NO_SHOW_ENCLOSER.
	* monotone.cc (coptions): Adjust accordingly -- rename switches to
	--no-show-encloser and --no-show-c-function, remove -p.
	(cpp_main): Adjust accordingly.

2006-07-14  Alex Queiroz  <alex@ventonegro.org>
